# src/controllers/usersController.js
@@ -1,6 +1,4 @@
-const jwt = require('jsonwebtoken');
-
-module.exports = function usersController(config, usersGateway) {
+module.exports = function usersController(config, usersService) {
   return {
     login,
     register
@@ -10,20 +8,16 @@ module.exports = function usersController(config, usersGateway) {
    * @returns {Promise}
    */
   async function login(req, res, next) {
-    // const credentials = req.body;
-    // TODO: verificar que sean correctas
+    const credentials = req.body;
+    let session;
 
-    // Todo esto viene de la DB
-    const uuid = 'mock de uuid dasjkdasdks';
-
-    let token;
     try {
-      token = await jwt.sign({ uuid }, config.jwt.key, { expiresIn: '30s' });
+      session = await usersService.login(credentials);
     } catch (err) {
       return next(err);
     }
 
-    return res.json({ uuid, token });
+    return res.status(200).json(session);
   }
 
   /**
@@ -33,7 +27,7 @@ module.exports = function usersController(config, usersGateway) {
     const userData = req.body;
 
     try {
-      await usersGateway.register(userData);
+      await usersService.register(userData);
     } catch (err) {
       return next(err);
     }
